third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/from_str/struct_non_flat_with_attribute.rs
#[derive(derive_more::FromStr)]
#[from_str(rename_all = "lowercase")]
pub struct Foo {
    bar: i32,
}

fn main() {}
